Chrome bug fixed
Overflow hidden was the problem. Had to adjust divider_2 so that it fit
exactly instead of the extra height being clipped

--- a/assets/stylus/styles.styl
+++ b/assets/stylus/styles.styl
@@ -178,42 +178,44 @@ grey_block()
 	color: white
 	border: 1px solid white
 	text-transform: uppercase
-	overflow: hidden
+	//overflow: hidden
 	z-index: 1
 	transition: opacity .2s ease
-		.title
-			title_1()
-			top: 2px
-		.divider1
-			border-right: 1px solid white
-			display: inline
-			margin: 0 33px 0 20px
-			padding: 10px 0
-			position: relative
-			top: -3px
-		.date
-			font-size: 20px
-			letter-spacing: .3em
-			position: relative
-			top: 1px
-		.play_triangle
-			width: 0
-			height: 0
-			border-top: 12px solid transparent
-			border-bottom: 12px solid transparent
-			border-left: 18px solid white
-			display:inline-block
-			position: relative
-			top: 5px
-		.divider2
-			border-right: 1px solid white
-			display: inline
-			margin: 0 35px 0 20px
-			padding: 42px 0
-			position: relative
-			top: -5px
-		a:hover
-			color: white
+	.title
+		title_1()
+		top: 2px
+	.divider1
+		border-right: 1px solid white
+		display: inline
+		margin: 0 33px 0 20px
+		padding: 10px 0
+		position: relative
+		top: -3px
+	.date
+		font-size: 20px
+		letter-spacing: .3em
+		position: relative
+		top: 1px
+	.play_triangle
+		width: 0
+		height: 0
+		border-top: 12px solid transparent
+		border-bottom: 12px solid transparent
+		border-left: 18px solid white
+		display:inline-block
+		position: relative
+		top: 5px
+	.divider2
+		border-right: 1px solid white
+		display: inline
+		margin: 0 35px 0 20px
+		//padding: 42px 0
+		padding: 33px 0
+		position: relative
+		//top: -5px
+		top: -3px
+	a:hover
+		color: white
 
 .home_hero_button:hover
 	opacity: .7
